@@ -34,42 +34,50 @@ EXTRA_ARGS=$@
 echo "-DBUILD_SHARED_LIBS:BOOL=ON" > COMMON.config
 
 echo "
+-DCMAKE_BUILD_TYPE:STRING=RELEASE
+-DTrilinos_ENABLE_DEBUG:BOOL=ON
+-DTPL_ENABLE_MPI:BOOL=ON
 -DTPL_ENABLE_Boost:BOOL=ON
 -DBoost_INCLUDE_DIRS:PATH=$HOME/PROJECTS/install/boost-1.40.0/include
 -DTrilinos_ENABLE_CHECKED_STL:BOOL=ON
 -DTrilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON
 -DTeuchos_ENABLE_DEBUG_RCP_NODE_TRACING:BOOL=ON
--DTeuchos_ENABLE_FLOAT:BOOL=OFF
--DTeuchos_ENABLE_COMPLEX:BOOL=OFF
+" > MPI_DEBUG_BOOST_TRACE.config
+
+echo "
+-DCMAKE_BUILD_TYPE:STRING=RELEASE
+-DTrilinos_ENABLE_DEBUG:BOOL=ON
+-DTPL_ENABLE_MPI:BOOL=ON
+-DTrilinos_ENABLE_DEBUG:BOOL=ON
+-DTrilinos_ENABLE_CHECKED_STL:BOOL=ON
+-DTrilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON
+-DTeuchos_ORDINAL_TYPE:STRIRNG=int
+" > MPI_DEBUG_INT.config
+
+echo "
+-DCMAKE_BUILD_TYPE:STRING=RELEASE
+-DTrilinos_ENABLE_DEBUG:BOOL=ON
+-DTPL_ENABLE_Boost:BOOL=ON
+-DBoost_INCLUDE_DIRS:PATH=$HOME/PROJECTS/install/boost-1.40.0/include
+-DTrilinos_ENABLE_CHECKED_STL:BOOL=ON
+-DTrilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON
+-DTeuchos_ENABLE_DEBUG_RCP_NODE_TRACING:BOOL=ON
 " > SERIAL_DEBUG_BOOST_TRACE.config
 
 echo "
 -DTrilinos_ENABLE_CHECKED_STL:BOOL=ON
 -DTrilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON
 -DTeuchos_ENABLE_DEBUG_RCP_NODE_TRACING:BOOL=ON
--DTeuchos_ENABLE_FLOAT:BOOL=OFF
--DTeuchos_ENABLE_COMPLEX:BOOL=OFF
 " > SERIAL_DEBUG_TRACE.config
 
 echo "
+-DCMAKE_BUILD_TYPE:STRING=RELEASE
+-DTrilinos_ENABLE_DEBUG:BOOL=ON
 -DTPL_ENABLE_Boost:BOOL=ON
 -DBoost_INCLUDE_DIRS:PATH=$HOME/PROJECTS/install/boost-1.40.0/include
 -DTrilinos_ENABLE_CHECKED_STL:BOOL=ON
 -DTrilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON
--DTeuchos_ENABLE_FLOAT:BOOL=OFF
--DTeuchos_ENABLE_COMPLEX:BOOL=OFF
 " > SERIAL_DEBUG_BOOST.config
-
-echo "
--DTPL_ENABLE_MPI:BOOL=ON
--DCMAKE_BUILD_TYPE:STRING=DEBUG
--DTrilinos_ENABLE_DEBUG:BOOL=ON
--DTrilinos_ENABLE_CHECKED_STL:BOOL=ON
--DTrilinos_ENABLE_EXPLICIT_INSTANTIATION:BOOL=ON
--DTeuchos_ORDINAL_TYPE:STRIRNG=int
--DTeuchos_ENABLE_FLOAT:BOOL=OFF
--DTeuchos_ENABLE_COMPLEX:BOOL=OFF
-" > MPI_DEBUG_INT.config
 
 
 #
